--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -37,6 +37,9 @@ html {
 header {
     background-color: #FFF8F3;
     padding-top: 50px;
+    background: url(../images/developer.png), url(../images/header_bg.png), #FFF8F3;
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
 }
 .logo h2 {
     font-size: 45px;
@@ -70,7 +73,7 @@ nav .menu a {
 }
 #banner .banner-content {
     margin-top: 136px;
-    width: 35.56rem;
+    max-width: 35.56rem;
     height: 22.25rem;
 }
 #banner .banner-content h2 {
@@ -89,4 +92,9 @@ nav .menu a {
     font-size: 18px;
     color: #757575;
     margin-bottom: 30px;
+}
+
+#banner .banner-image img{ 
+    max-width: 585px;
+    vertical-align: middle;
 }
