I added the about me section. It was pretty quick, maybe I am getting better at figma to html,css design. Haha

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -33,13 +33,14 @@ html {
 
 
 
-/* Main Style*/
+/* Header & Hero Section*/
 header {
     background-color: #FFF8F3;
     padding-top: 50px;
     background: url(../images/developer.png), url(../images/header_bg.png), #FFF8F3;
-    background-position: top left, bottom right;
+    background-position: 23px 38px, bottom right;
     background-repeat: no-repeat;
+    background-size: 136px 774px, auto auto;
 }
 .logo h2 {
     font-size: 45px;
@@ -97,4 +98,52 @@ nav .menu a {
 #banner .banner-image img{ 
     max-width: 585px;
     vertical-align: middle;
+}
+
+
+/* Main Content*/
+
+.about-section {
+    margin: 130px 230px;
+    padding: 131px 157px;
+    max-width: 1140px;
+    max-height: 550px;
+    background-color: #FFF8F3;
+    border-radius: 10px;
+}
+.about-me {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.about-me h3 {
+    font-size: 35px;
+    color: #181818;
+}
+.about-me p {
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 30px;
+    text-align: center;
+}
+.about-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 22.5px;
+    margin-right: 22.5px;
+
+}
+.contact-info {
+    text-align: center;
+}
+.contact-info span {
+    font-size: 20px;
+    color: #757575;
+}
+.contact-info p {
+    font-size: 20px;
+    font-weight: 700;
+    color: #474747;
 }
