--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -22,6 +22,7 @@ html {
     color: #FFFFFF;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 
@@ -146,4 +147,55 @@ nav .menu a {
     font-size: 20px;
     font-weight: 700;
     color: #474747;
+}
+.what-I-do-section {
+    max-width: 1140px;
+    height: 595px;
+    margin: 130px 230px;
+}
+.what-I-do {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 827px;
+    margin: 0 auto;
+    padding-top: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.what-I-do h3 {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.what-I-do p {
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 30px;
+    font-size: 18px;
+    color: #757575;
+}
+.skill-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+.skill {
+    max-width: 267px;
+    height: 377px;
+    padding: 30px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.12);
+}
+.skill h4 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill p {
+    font-size: 16px;
+    color: #757575;
 }
